Fixed spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,8 +193,8 @@ textarea {
 }
 
 .carousel-item {
-   max-width: 80%;
-   margin-left: 10%;
+   /*max-width: 80%;*/
+   /*margin-left: 10%;*/
 }
 
 @media only screen and (max-width: 601px) { 
